New background + photos

--- a/Code/index.html
+++ b/Code/index.html
@@ -50,7 +50,7 @@
   </div>
 
 
-  <!-- Timer -->
+  <!-- Timer
   <div class="launch-time">
     <div>
       <p id="days" style="padding-right: 15px;"> 00 </p>
@@ -64,7 +64,7 @@
     <div>
       <p id="seconds" style="padding-right: 15px;"> 00 </p>
     </div>
-  </div>
+  </div> -->
 
   <header class="header container">
     <div class="fullscreen-video-wrap">
@@ -88,7 +88,7 @@
 
           <div class="card-info">
             <i class="fa-brands fa-html5" style="padding-right: 45px; font-size: 25px;"></i>
-            <i class="fa-brands fa-css3" style="padding-right: 45px; font-size: 25px;"></i>
+            <i class="fa-brands fa-sass" style="padding-right: 45px; font-size: 25px;"></i>
             <i class="fa-brands fa-js" style="font-size: 25px;"></i>
           </div>
         </div>
@@ -108,7 +108,7 @@
         </div>
       </a>
       <a class="card" onclick="on3()">
-        <div class="card__background" style="background-image: url('../Code/Foto\'s/123456.jpg'); background-size: contain;">
+        <div class="card__background" style="background-image: url('../Foto\'s/123456.jpg'); background-size: contain;">
           <div class="card-info">
             <i class="fa-brands fa-react" style="padding-right: 45px; font-size: 25px;"></i>
             <i class="fa-brands fa-js" style="font-size: 25px; padding-right: 45px;"></i>
@@ -141,7 +141,7 @@
           </div>
         </a>
         <a class="card" onclick="on6()">
-          <div class="card__background" style="background-image: url('../Foto\'s/Untitled-2.jpg');">
+          <div class="card__background" style="background-image: url('../Foto\'s/Dashboard.jpg'); background-position: center; background-size: contain;">
             <div class="card-info">
               <i class="fa-brands fa-react" style="padding-right: 45px; font-size: 25px;"></i>
               <i class="fa-brands fa-css3" style="padding-right: 45px; font-size: 25px;"></i>
@@ -152,7 +152,7 @@
           </div>
         </a>
         <a class="card" onclick="on7()">
-          <div class="card__background" style="background-image: url('../Foto\'s/95.png');">
+          <div class="card__background" style="background-image: url('../Foto\'s/verhaalvan.jpg'); background-position:left; background-size: cover;">
             <div class="card-info">
               <i class="fa-brands fa-python" style="font-size: 25px;"></i>
             </div>
@@ -285,13 +285,13 @@
   <section id="overlay-6">
     <div class="about-card">
       <div class="inhoud">
-        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Input-Output</h1>
+        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Dashboard</h1>
         <p style="padding-top: 40px; color: white;"></p>
 
 
-        <a href="https://trello.com/b/cURQGeLi/input-output" class="fa fa-trello"></a>
+        <a href="#" class="fa fa-trello"></a>
         <a href="#" class="fa fa-code"></a>
-        <a href="https://github.com/JamieVos991/Input-Output" class="fa fa-github"></a>
+        <a href="https://github.com/JamieVos991/Dashboard-React" class="fa fa-github"></a>
         <div onclick="off6()" class="close-btn">&times;</div>
       </div>
     </div>
@@ -300,7 +300,7 @@
   <section id="overlay-7">
     <div class="about-card">
       <div class="inhoud">
-        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">CSS Art</h1>
+        <h1 id="font-size" class="owText text-center" style=" padding-top: 40px; color: white;">Face detection</h1>
         <p style="padding-top: 40px; color: white;"></p>
 
         <a href="#" class="fa fa-trello"></a>
