Converted normal portfolio into React, almost completed

--- a/Code/index.html
+++ b/Code/index.html
@@ -49,23 +49,6 @@
     </div>
   </div>
 
-
-  <!-- Timer
-  <div class="launch-time">
-    <div>
-      <p id="days" style="padding-right: 15px;"> 00 </p>
-    </div>
-    <div>
-      <p id="hours" style="padding-right: 15px;"> 00 </p>
-    </div>
-    <div>
-      <p id="minutes" style="padding-right: 15px;"> 00 </p>
-    </div>
-    <div>
-      <p id="seconds" style="padding-right: 15px;"> 00 </p>
-    </div>
-  </div> -->
-
   <header class="header container">
     <div class="fullscreen-video-wrap">
       <video src="../Foto's/pexels-mikhail-nilov-7534239.mp4" type="video/mp4" class="video-player" autoplay="autoplay"
@@ -79,9 +62,8 @@
 
  
 
-
+  <h1 class="h1__card">School projects</h1>
   <section class="card-section">
-      
     <div class="card-grid">
       <a class="card" onclick="on()">
         <div class="card__background" style="background-image: url('../Foto\'s/Drill.jpg'); background-size:cover;">
