--- a/Code/skills.html
+++ b/Code/skills.html
@@ -48,7 +48,7 @@
         <div class="outer">
             <div class="card">
                 <div class="info">
-                    <h3 class="title"> < 2018</h3>
+                    <h3 class="title"> 2018</h3>
                     <p>I’ve been designing with computers since the day I first opened Microsoft Paint. The cusp of art and technology has always fascinated me and I've never been afraid to just jump in and give it a go, whether it's Paint, Photoshop, Sketch or CSS.</p>
                 </div>
             </div>
